# libro

./: .env.example  .gitignore  README.md  config.yaml  pyproject.toml
.github/workflows/: ci.yml
libro/: __init__.py  cli.py  config.py  database.py
libro/branding/: ai_backgrounds.py  brand_manager.py  cli.py  cover.py  niche_styles.py
libro/common/: amazon.py  notifications.py  pdf_utils.py  pdf_validation.py  rate_limiter.py  similarity.py
libro/generation/: cli.py  interior.py  interior_params.py  niche_enricher.py  personas.py  title_engine.py  variant_engine.py
libro/intelligence/: cli.py  discovery.py  keepa_client.py  keyword_analyzer.py  scorer.py  scraper.py
libro/kdp/: cli.py  selectors.py  uploader.py
libro/models/: __init__.py  brand.py  niche.py  product.py  publication.py  series.py  tracking.py  variant.py
libro/publication/: checklist.py  cli.py  isbn.py  metadata.py  packager.py
libro/strategy/: analytics.py  cli.py  compliance.py  dashboard.py  evergreen_niches.py  feedback_loop.py  flood.py  optimizer.py  scaler.py
libro/tracking/: cli.py  cron.py  evaluator.py  monitor.py
libro/web/: app.py
scripts/: daily_flood.sh
tests/: conftest.py  test_database.py
tests/test_branding/: test_cover.py  test_niche_styles.py
tests/test_common/: test_notifications.py  test_pdf_validation.py  test_similarity.py
tests/test_generation/: test_interior.py  test_intro_pages.py  test_niche_enricher.py  test_personas.py  test_thematic.py  test_title_engine.py  test_variant_engine.py
tests/test_integration/: test_end_to_end.py
(+18 files in other folders)
